--- a/css/main.css
+++ b/css/main.css
@@ -31,11 +31,58 @@
 
 body {
   font-family: "Space", monospace;
+  color: white;
+  background-color: var(--background);
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 5vh;
 }
 
 h2 {
-  margin: 0;
+  font-size: 4vh;
 }
+
+h3 {
+  font-size: 3vh;
+}
+
+h4 {
+  font-size: 2vh;
+}
+
+h5 {
+  font-size: 1vh;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--tertiary);
+  text-decoration: underline;
+}
+
+/* h2 {
+  margin: 0;
+} */
 
 #header {
   height: 10vh;
@@ -97,7 +144,7 @@ h2 {
   background-color: var(--primary);
   position: absolute;
   width: 20vw;
-  left: 2.5vw;
+  left: 1vw;
   top: 15vh;
   border-radius: 4vh;
   padding: 1vw;
