--- a/css/main.css
+++ b/css/main.css
@@ -1,176 +1,3 @@
-@charset "UTF-8";
-
-@font-face {
-  font-family: "Space";
-  src: url("../dump/this/SpaceMono-Regular.ttf") format("ttf");
-}
-
-:root {
-  --text: rgb(252, 253, 253);
-  --background: rgb(3, 6, 7);
-  --primary: rgb(57, 66, 116);
-  --secondary: rgb(34, 30, 62);
-  --tertiary: rgb(94, 74, 181);
-  --accent: rgb(100, 116, 160);
-}
-
-.centerX {
-  display: flex;
-  justify-content: center;
-}
-.centerY {
-  display: flex;
-  align-items: center;
-}
-
-.centerXY {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-body {
-  font-family: "Space", monospace;
-  color: white;
-  background-color: var(--background);
-  margin: 0;
-  padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 700;
-}
-
-h1 {
-  font-size: 5vh;
-}
-
-h2 {
-  font-size: 4vh;
-}
-
-h3 {
-  font-size: 3vh;
-}
-
-h4 {
-  font-size: 2vh;
-}
-
-h5 {
-  font-size: 1vh;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-}
-
-a:hover {
-  color: var(--tertiary);
-  text-decoration: underline;
-}
-
-/* h2 {
-  margin: 0;
-} */
-
-#header {
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  background-color: var(--primary);
-}
-
-#opts-button-icon {
-  float: left;
-  width: 5vh;
-  height: 5vh;
-  margin: 2vh;
-  cursor: pointer;
-}
-
-#header-sub {
-  background-color: var(--accent);
-  border-radius: 3vh;
-  margin-left: 2vw;
-}
-
-#header-sub-icon {
-  width: 5vh;
-  height: 5vh;
-  margin: 1vh;
-}
-
-#header-sub-label {
-  margin: 1vh 1.75vh 1vh 0;
-}
-
-#select {
-  position: absolute;
-  right: 1vw;
-}
-
-.select {
-  float: left;
-  margin-right: 0.75vw;
-  border-right: 0.3vw dotted var(--text);
-  padding-right: 0.75vw;
-  cursor: pointer;
-}
-
-.select:hover {
-  text-decoration: underline;
-}
-
-#last {
-  border: none;
-}
-
-.selected {
-  color: var(--accent);
-}
-
-#sidebar {
-  background-color: var(--primary);
-  position: absolute;
-  width: 20vw;
-  left: 1vw;
-  top: 15vh;
-  border-radius: 4vh;
-  padding: 1vw;
-}
-
-.social-icon {
-  float: left;
-  width: 6vh;
-  height: 6vh;
-  padding: 0.5vh;
-}
-
-.social-label {
-  padding: 0.5vh;
-}
-
-#content-container {
-  text-align: center;
-  padding: 2vw;
-}
-
-#content {
-  background-color: var(--secondary);
-  width: 46vw;
-  padding: 2vw;
-  border-radius: 5vh;
-  box-shadow: 0 0 2vh var(--tertiary), 0 0 3vh var(--tertiary),
-    0 0 4vh var(--tertiary);
-}
+@import url("index.css");
+@import url("header.css");
+@import url("content.css");
