--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
 @import url("index.css");
 @import url("header.css");
+@import url("docs.css");
 @import url("content.css");
+@import url("gallery.css");
