Sorting, cut html down to 50 lines from 200, bunch of other changes nobody cares about despite how long they took:((
Javascript still sucks typescript is still barely bearable

--- a/css/header.css
+++ b/css/header.css
@@ -57,11 +57,25 @@
 #sidebar {
   background-color: var(--primary);
   position: absolute;
-  width: 15vw;
-  left: 1vw;
-  top: 15vh;
+  width: 21vw;
+  left: 0.5vw;
+  top: 12.5vh;
   border-radius: 4vh;
   padding: 1vw;
+}
+
+.sort-select,
+.sort-selectf,
+.show-select {
+  padding: 0.2vw;
+  margin: 0;
+  cursor: pointer;
+}
+
+.sort-select:hover,
+.sort-selectf:hover,
+.show-select:hover {
+  text-decoration: underline;
 }
 
 .social-icon {
