--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("index.css");
+@import url("root.css");
 @import url("header.css");
 @import url("docs.css");
 @import url("content.css");
